--- a/virus.html
+++ b/virus.html
@@ -34,9 +34,7 @@
           Settings:
           Try this:
           <a href="http://modelingcommons.org/browse/one_model/6713">
-              netLogo Virus 1</a>  <!--http://modelingcommons.org/browse/one_model/6713?embedded=true -->
-        <!-- I want my iframe here...
- <iframe src="http://modelingcommons.org/browse/one_model/6713?embedded=true" />-->
+              netLogo Virus 1</a>  
             </p>
         <p>When you're done, answer these questions in your notebook:
         Why does the graph not match perfectly with the trace?
@@ -45,25 +43,20 @@
         Is model 3 the correct model?  Why or why not?</p>
       <p>Do viruses (gossip, viral video views) grow linearly?</p><p>Although you've been learning about linear models since kindergarten, the world we live in is not linear.</p>
     </article>
-    <aside class="right_article"><img src="pexels-cdc-3992943.jpg" alt="Photo by CDC from Pexels
-" width="400" height="200" class="placeholder"/> </aside>
+    <aside class="right_article"><img src="pexels-cdc-3992943.jpg" alt="Photo by CDC from Pexels" width="400" height="200" class="placeholder"/> </aside>
   </section>
   <div class="row">
     <div class="columns">
-      <p class="thumbnail_align"> <img src="pexels-cdc-3992943.jpg" alt="Photo by CDC from Pexels
-" class="thumbnail"/> </p>
+      <p class="thumbnail_align"> <img src="pexels-cdc-3992943.jpg" alt="Photo by CDC from Pexels" class="thumbnail"/> </p>
       <h4>Virus</h4>
         <p>
            <a href="http://modelingcommons.org/browse/one_model/6713">
-              netLogo Virus 1</a>  <!--http://modelingcommons.org/browse/one_model/6713?embedded=true -->
-        <!-- I want my iframe here...
- <iframe src="http://modelingcommons.org/browse/one_model/6713?embedded=true" />-->
+              netLogo Virus 1</a>
             </p>
       <p>Do viruses (gossip, viral video views) grow linearly?</p>
     </div>
     <div class="columns">
-      <p class="thumbnail_align"> <img src="pexels-abdullah-ghatasheh-1631678.jpg" alt="Photo by Abdullah Ghatasheh from Pexels
-" class="thumbnail"/> </p>
+      <p class="thumbnail_align"> <img src="pexels-abdullah-ghatasheh-1631678.jpg" alt="Photo by Abdullah Ghatasheh from Pexels" class="thumbnail"/> </p>
       <h4>Daylight</h4>
       <p>Does daylight grow linearly?</p>
     </div>
@@ -73,8 +66,7 @@
       <p>Does a free-throw's height increase linearly?</p>
     </div>
     <div class="columns">
-      <p class="thumbnail_align"> <img src="pexels-photo-6936406.jpeg" alt="Photo by RODNAE Productions from Pexels
-" class="thumbnail"/> </p>
+      <p class="thumbnail_align"> <img src="pexels-photo-6936406.jpeg" alt="Photo by RODNAE Productions from Pexels" class="thumbnail"/> </p>
       <h4>Gossip</h4>
       <p>How quickly does gossip spread</p>
         <!-- Does a virus decay linearly once a vaccine is developed? -->
@@ -89,10 +81,12 @@
     </div>
   </div>
   <div class="social">
+    <!--
     <p class="social_icon"><img src="bkg_06.jpg" width="100" alt="" class="thumbnail"/></p>
     <p class="social_icon"><img src="bkg_06.jpg" width="100" alt="" class="thumbnail"/></p>
     <p class="social_icon"><img src="bkg_06.jpg" width="100" alt="" class="thumbnail"/></p>
     <p class="social_icon"><img src="bkg_06.jpg" width="100" alt="" class="thumbnail"/></p>
+-->
   </div>
   <footer class="secondary_header footer">
     <div class="copyright">&copy;2020 - <strong>SIMPLE Theme, Adobe DreamWeaver</strong></div>
