--- a/virus.html
+++ b/virus.html
@@ -32,9 +32,7 @@
           How does a virus spread?  The linked netLogo model provides 3 different models to explore.  Models 1, 2, 3.
           
           Settings:
-          Try this:
-          <a href="http://modelingcommons.org/browse/one_model/6713">
-              netLogo Virus 1</a>  
+          Try this: 
             </p>
         <p>When you're done, answer these questions in your notebook:
         Why does the graph not match perfectly with the trace?
@@ -46,13 +44,12 @@
     <aside class="right_article"><img src="pexels-cdc-3992943.jpg" alt="Photo by CDC from Pexels" width="400" height="200" class="placeholder"/> </aside>
   </section>
   <div class="row">
+    <iframe src="Linearvirus.html" title="netLogo Gossip NOT" height="850" width="850"></iframe>
+  </div>
+  <div class="row">
     <div class="columns">
       <p class="thumbnail_align"> <img src="pexels-cdc-3992943.jpg" alt="Photo by CDC from Pexels" class="thumbnail"/> </p>
       <h4>Virus</h4>
-        <p>
-           <a href="http://modelingcommons.org/browse/one_model/6713">
-              netLogo Virus 1</a>
-            </p>
       <p>Do viruses (gossip, viral video views) grow linearly?</p>
     </div>
     <div class="columns">
