--- a/virus.html
+++ b/virus.html
@@ -16,7 +16,7 @@
     </div>
     <nav class="secondary_header" id="menu">
       <ul>
-        <li><a href="index.html">Models</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="virus.html">Virus</a></li>
         <li><a href="daylight.html">Daylight</a></li>
         <li><a href="swish.html">Swish!</a></li>
@@ -39,12 +39,11 @@
         Is model 1 the correct model?  Why or why not?
         Is model 2 the correct model?  Why or why not?
         Is model 3 the correct model?  Why or why not?</p>
-      <p>Do viruses (gossip, viral video views) grow linearly?</p><p>Although you've been learning about linear models since kindergarten, the world we live in is not linear.</p>
     </article>
     <aside class="right_article"><img src="pexels-cdc-3992943.jpg" alt="Photo by CDC from Pexels" width="400" height="200" class="placeholder"/> </aside>
   </section>
   <div class="row">
-    <iframe src="Linearvirus.html" title="netLogo Gossip NOT" height="850" width="850"></iframe>
+    <iframe src="Linearvirus.html" title="netLogo Virus model" height="950" width="850"></iframe>
   </div>
   <div class="row">
     <div class="columns">
