--- a/virus.html
+++ b/virus.html
@@ -45,26 +45,42 @@
   <div class="row">
     <iframe src="Linearvirus.html" title="netLogo Virus model" height="950" width="850"></iframe>
   </div>
-  <div class="row">
+   <div class="row">
     <div class="columns">
-      <p class="thumbnail_align"> <img src="pexels-cdc-3992943.jpg" alt="Photo by CDC from Pexels" class="thumbnail"/> </p>
+      <p class="thumbnail_align">
+          <a href="virus.html">
+            <img src="pexels-cdc-3992943.jpg" alt="Photo by CDC from Pexels" class="thumbnail"/>
+        </a>
+      </p>
       <h4>Virus</h4>
-      <p>Do viruses (gossip, viral video views) grow linearly?</p>
+      <p>Do viruses grow linearly?</p>
     </div>
     <div class="columns">
-      <p class="thumbnail_align"> <img src="pexels-abdullah-ghatasheh-1631678.jpg" alt="Photo by Abdullah Ghatasheh from Pexels" class="thumbnail"/> </p>
+      <p class="thumbnail_align">
+        <a href="daylight.html">
+          <img src="pexels-abdullah-ghatasheh-1631678.jpg" alt="Photo by Abdullah Ghatasheh from Pexels" class="thumbnail"/>
+        </a>
+      </p>
       <h4>Daylight</h4>
-      <p>Does daylight grow linearly?</p>
+      <p>Does daylight increase constantly?</p>
     </div>
     <div class="columns">
-      <p class="thumbnail_align"> <img src="pexels-rodnae-productions-5837020.jpg" alt="Photo by RODNAE Productions from Pexels" class="thumbnail"/> </p>
+      <p class="thumbnail_align">
+        <a href="swish.html">
+          <img src="pexels-rodnae-productions-5837020.jpg" alt="Photo by RODNAE Productions from Pexels" class="thumbnail"/>
+        </a>
+      </p>
       <h4>Swish!</h4>
       <p>Does a free-throw's height increase linearly?</p>
     </div>
     <div class="columns">
-      <p class="thumbnail_align"> <img src="pexels-photo-6936406.jpeg" alt="Photo by RODNAE Productions from Pexels" class="thumbnail"/> </p>
+      <p class="thumbnail_align">
+        <a href="gossip.html">
+          <img src="pexels-photo-6936406.jpeg" alt="Photo by RODNAE Productions from Pexels" class="thumbnail"/>
+        </a>
+      </p>
       <h4>Gossip</h4>
-      <p>How quickly does gossip spread</p>
+      <p>How quickly does gossip spread?</p>
         <!-- Does a virus decay linearly once a vaccine is developed? -->
     </div>
   </div>
@@ -85,7 +101,7 @@
 -->
   </div>
   <footer class="secondary_header footer">
-    <div class="copyright">&copy;2020 - <strong>SIMPLE Theme, Adobe DreamWeaver</strong></div>
+    <div class="copyright">&copy;2020 - SIMPLE Theme, Adobe DreamWeaver</div>
   </footer>
 </div>
 </body>
