--- a/virus.html
+++ b/virus.html
@@ -43,7 +43,7 @@
     <aside class="right_article"><img src="pexels-cdc-3992943.jpg" alt="Photo by CDC from Pexels" width="400" height="200" class="placeholder"/> </aside>
   </section>
   <div class="row">
-    <iframe src="MS_Virus.html" title="netLogo Virus model" height="950" width="850"></iframe>
+    <iframe src="linearV.html" title="netLogo Virus model" height="950" width="850"></iframe>
   </div>
    <div class="row">
     <div class="columns">
