--- a/virus.html
+++ b/virus.html
@@ -23,11 +23,21 @@
         <li><a href="gossip.html">Gossip</a></li>
       </ul>
     </nav>
+     <nav class="secondary_header" id="menu" style="background-color: blue;">
+      <ul>
+        <li><a href="index.html">Start here</a></li>
+        <li><a href="virus.html">Virus</a></li>
+        <li><a href="daylight.html">Model Help</a></li>
+        <li><a href="swish.html">Model</a></li>
+        <li><a href="gossip.html">Journal</a></li>
+      </ul>
+    </nav>
   </header>
   <section>
     <h2 class="noDisplay">Main Content</h2>
     <article class="left_article">
       <h3>Virus Model</h3>
+      <img src="netLogoHelp.png">
       <p>
           How does a virus spread?  The linked netLogo model provides 3 different models to explore.  Models 1, 2, 3.
           
