--- a/virus.html
+++ b/virus.html
@@ -23,7 +23,7 @@
         <li><a href="gossip.html">Gossip</a></li>
       </ul>
     </nav>
-     <nav class="secondary_header" id="menu" style="background-color: yellow;">
+     <nav class="secondary_header" id="menu" style="background-color:cornsilk">
       <ul>
         <li><a href="index.html">Start here</a></li>
         <li><a href="virus.html">Virus</a></li>
@@ -37,7 +37,7 @@
     <h2 class="noDisplay">Main Content</h2>
     <article class="left_article">
       <h3>Virus Model</h3>
-      <img src="netLogoHelp.png" style="max-width: 100%;max-height: 100%;">
+      <img src="netLogoHelp.png" style="max-width:100%;max-height:100%;">
       <p>
           How does a virus spread?  The linked netLogo model provides 3 different models to explore.  Models 1, 2, 3.
           
