--- a/virus.html
+++ b/virus.html
@@ -1,4 +1,7 @@
 <!doctype html>
+<!-- <a name="to top"></a> or
+<a name="Content"></a>Content
+<a href="#Content">Content</a> -->
 <html>
 <head>
 <meta charset="UTF-8">
@@ -27,7 +30,7 @@
       <ul>
         <li><a href="index.html">Start here</a></li>
         <li><a href="virus.html">Virus</a></li>
-        <li><a href="daylight.html">Model Help</a></li>
+        <li><a href="#Help">Model Help</a></li>
         <li><a href="swish.html">Model</a></li>
         <li><a href="gossip.html">Journal</a></li>
       </ul>
@@ -52,6 +55,14 @@
     </article>
     <aside class="right_article"><img src="pexels-cdc-3992943.jpg" alt="Photo by CDC from Pexels" width="400" height="200" class="placeholder"/> </aside>
   </section>
+  <div>Start here!</div>
+  <div>
+    <a name="Help"></a>Help!
+    <p>
+      Help!
+    </p>
+    <img src="netLogoHelp.png" style="max-width:100%;max-height:100%;">
+  </div>
   <div class="row">
     <iframe src="linearV.html" title="netLogo Virus model" height="950" width="850"></iframe>
   </div>
