--- a/virus.html
+++ b/virus.html
@@ -29,9 +29,9 @@
      <nav class="secondary_header" id="menu" style="background-color:cornsilk">
       <ul>
         <li><a href="index.html">Start here</a></li>
-        <li><a href="virus.html">Virus</a></li>
+        <li><a href="virus.html">Virus Video</a></li>
         <li><a href="#Help">Model Help</a></li>
-        <li><a href="swish.html">Model</a></li>
+        <li><a href="swish.html">Linear Model</a></li>
         <li><a href="gossip.html">Journal</a></li>
       </ul>
     </nav>
@@ -42,8 +42,10 @@
       <h3>Virus Model</h3>
       <img src="netLogoHelp.png" style="max-width:100%;max-height:100%;">
       <p>
-          How does a virus spread?  The linked netLogo model provides 3 different models to explore.  Models 1, 2, 3.
-          
+          Email from district announcing more COVID cases
+        
+        There are 38 people in your class.  How long before everyone is infected?
+        How does a virus spread?  The linked netLogo model provides 3 different models to explore.  Models 1, 2, 3.
           Settings:
           Try this: 
             </p>
@@ -56,6 +58,10 @@
     <aside class="right_article"><img src="pexels-cdc-3992943.jpg" alt="Photo by CDC from Pexels" width="400" height="200" class="placeholder"/> </aside>
   </section>
   <div>Start here!</div>
+  <div>
+    <a name="Video"></a>Video
+    <iframe width="1188" height="668" src="https://www.youtube.com/embed/GFm45J8d7HI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
   <div>
     <a name="Help"></a>Help!
     <p>
