--- a/virus.html
+++ b/virus.html
@@ -40,7 +40,7 @@
     <h2 class="noDisplay">Main Content</h2>
     <article class="left_article">
       <h3>Virus Model</h3>
-      <img src="netLogoHelp.png" style="max-width:100%;max-height:100%;">
+      <img src="VirusEmail.png" style="max-width:100%;max-height:100%;">
       <p>
           Email from district announcing more COVID cases
         
