--- a/virus.html
+++ b/virus.html
@@ -39,7 +39,7 @@
   <section>
     <h2 class="noDisplay">Main Content</h2>
     <article class="left_article">
-      <h3>Virus Model</h3>
+      <h3>Start here!</h3>
       <img src="VirusEmail.png" style="max-width:100%;max-height:100%;">
       <p>
           Email from district announcing more COVID cases
@@ -57,18 +57,18 @@
     </article>
     <aside class="right_article"><img src="pexels-cdc-3992943.jpg" alt="Photo by CDC from Pexels" width="400" height="200" class="placeholder"/> </aside>
   </section>
-  <div>Start here!</div>
+  <h3>Video</h3>
   <div>
-    <a name="Video"></a>Video
+    <a name="Video"></a>
     <iframe width="1188" height="668" src="https://www.youtube.com/embed/GFm45J8d7HI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
-  <div>
+  <article class="left_article">
+    <h3>Model Help</a>
     <a name="Help"></a>Help!
-    <p>
-      Help!
-    </p>
     <img src="netLogoHelp.png" style="max-width:100%;max-height:100%;">
-  </div>
+  </article>
+  <h3>NetLogo Model</h3>
+  <a name="Linear Model"></a>
   <div class="row">
     <iframe src="linearV.html" title="netLogo Virus model" height="950" width="850"></iframe>
   </div>
