--- a/virus.html
+++ b/virus.html
@@ -42,8 +42,8 @@
       <h3>Start here!</h3>
       <img src="VirusEmail.png" style="max-width:100%;max-height:100%;">
       <p>        
-        There are 38 people in your class.  How long before everyone is infected?
-        How does a virus spread?  The linked netLogo model provides 3 different models to explore.  Models 1, 2, 3.
+        There are 387 people in your school.  How long before everyone is infected?
+   <!--     How does a virus spread?  The linked netLogo model provides 3 different models to explore.  Models 1, 2, 3.
           Settings:
           Try this: 
             </p>
@@ -51,20 +51,30 @@
         Why does the graph not match perfectly with the trace?
         Is model 1 the correct model?  Why or why not?
         Is model 2 the correct model?  Why or why not?
-        Is model 3 the correct model?  Why or why not?</p>
+        Is model 3 the correct model?  Why or why not?
+-->
+      </p>
     </article>
     <aside class="right_article"><img src="pexels-cdc-3992943.jpg" alt="Photo by CDC from Pexels" width="400" height="200" class="placeholder"/> </aside>
   </section>
+  <br/>
+  <br/>
+  <br/>
   <h3>Video</h3>
+  What exactly is a virus?  How does it spread?
   <div>
     <a name="Video"></a>
     <iframe width="1188" height="668" src="https://www.youtube.com/embed/GFm45J8d7HI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
+  <br/>
+  <br/>
   <article class="left_article">
     <h3>Model Help</a>
     <a name="Help"></a>Help!
     <img src="netLogoHelp.png" style="max-width:100%;max-height:100%;">
   </article>
+  <br/>
+  <br/>
   <h3>NetLogo Model</h3>
   <a name="Linear Model"></a>
   <div class="row">
