--- a/virus.html
+++ b/virus.html
@@ -60,12 +60,14 @@
   <br/>
   <br/>
   <br/>
+  <article class="left_article">
   <h3>Video</h3>
   What exactly is a virus?  How does it spread?
   <div>
     <a name="Video"></a>
     <iframe width="1188" height="668" src="https://www.youtube.com/embed/GFm45J8d7HI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
+  </article>
   <br/>
   <br/>
   <article class="left_article">
