--- a/virus.html
+++ b/virus.html
@@ -55,7 +55,8 @@
 -->
       </p>
     </article>
-    <aside class="right_article"><img src="pexels-cdc-3992943.jpg" alt="Photo by CDC from Pexels" width="400" height="200" class="placeholder"/> </aside>
+   <!-- <aside class="right_article"><img src="pexels-cdc-3992943.jpg" alt="Photo by CDC from Pexels" width="400" height="200" class="placeholder"/> </aside>
+ -->
   </section>
   <br/>
   <br/>
