--- a/virus.html
+++ b/virus.html
@@ -73,7 +73,7 @@
   <br/>
   <article class="left_article">
     <h3>Model Help</a>
-    <a name="Help"></a>Help!
+    <a name="Help"></a>
     <img src="netLogoHelp.png" style="max-width:100%;max-height:100%;">
   </article>
   <br/>
