--- a/virus.html
+++ b/virus.html
@@ -78,11 +78,13 @@
   </article>
   <br/>
   <br/>
+  <article class="left_article">
   <h3>NetLogo Model</h3>
   <a name="Linear Model"></a>
   <div class="row">
     <iframe src="linearV.html" title="netLogo Virus model" height="950" width="850"></iframe>
   </div>
+  </article>
    <div class="row">
     <div class="columns">
       <p class="thumbnail_align">
