--- a/virus.html
+++ b/virus.html
@@ -3,20 +3,22 @@
 <a name="Content"></a>Content
 <a href="#Content">Content</a> -->
 <html>
-<head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Non-Linear Functions</title>
-<link href="BBAnonLinearityMS.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inder">
-</head>
+  <head>
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <title>Non-Linear Functions</title>
+   <link href="BBAnonLinearityMS.css" rel="stylesheet" type="text/css">
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inder">
+  </head> 
+  <!-- - - - - - - - - - - - BODY STARTS HERE - - - - - - - - - - - - --->
 <body>
 <div class="container">
   <header>
     <div class="primary_header">
       <h1 class="title"> Exploring non-Linearity in Middle School</h1>
     </div>
+      <!-- - - - - - - - - - - - MAIN NAVIGATION - - - - - - - - - - - - --->
     <nav class="secondary_header" id="menu">
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -26,6 +28,7 @@
         <li><a href="gossip.html">Gossip</a></li>
       </ul>
     </nav>
+      <!-- - - - - - - - - - - - SECONDARY NAVIGATION - - - - - - - - - - - - --->
      <nav class="secondary_header" id="menu" style="background-color:cornsilk">
       <ul>
         <li><a href="index.html">Start here</a></li>
@@ -36,6 +39,7 @@
       </ul>
     </nav>
   </header>
+    <!-- - - - - - - - - - - - NEW SECTION FOR CONTENT - - - - - - - - - - - - --->
   <section>
     <h2 class="noDisplay">Main Content</h2>
     <article class="left_article">
@@ -61,6 +65,7 @@
   <br/>
   <br/>
   <br/>
+    <!-- - - - - - - - - - - - YOUTUBE VIDEO HERE - - - - - - - - - - - - --->
   <article class="left_article">
   <h3>Video</h3>
   What exactly is a virus?  How does it spread?
@@ -71,6 +76,7 @@
   </article>
   <br/>
   <br/>
+    <!-- - - - - - - - - - - - NETLOGO HELP IMAGE HERE - - - - - - - - - - - - --->
   <article class="left_article">
     <h3>Model Help</a>
     <a name="Help"></a>
@@ -78,6 +84,7 @@
   </article>
   <br/>
   <br/>
+    <!-- - - - - - - - - - - - NETLOGO MODEL HERE - - - - - - - - - - - - --->
   <article class="left_article">
   <h3>NetLogo Model</h3>
   <a name="Linear Model"></a>
@@ -85,6 +92,7 @@
     <iframe src="linearV.html" title="netLogo Virus model" height="950" width="850"></iframe>
   </div>
   </article>
+    <!-- - - - - - - - - - - - MODEL NAVIGATION WITH CIRCLE IMAGE ICONS HERE - - - - - - - - - - - - --->
    <div class="row">
     <div class="columns">
       <p class="thumbnail_align">
@@ -124,6 +132,7 @@
         <!-- Does a virus decay linearly once a vaccine is developed? -->
     </div>
   </div>
+    <!-- - - - - - - - - - - - JUST SOME EMPTY BLOCKS THAT HAD SOCIAL MEDIA ICONS HERE - - - - - - - - - - - - --->
   <div class="row blockDisplay">
     <div class="column_half left_half">
       <h2 class="column_title"></h2>
