--- a/virus.html
+++ b/virus.html
@@ -43,7 +43,7 @@
   <section>
     <h2 class="noDisplay">Main Content</h2>
     <article class="left_article">
-      <h3>Start here!</h3>
+      <h3>Spring break has ended and it's time to get back to school.  An urgent message has appeared in your inbox:</h3>
       <img src="VirusEmail.png" style="max-width:100%;max-height:100%;">
       <h3>        
         There are 387 people in your school.  How long before everyone is infected?
@@ -78,7 +78,7 @@
   <br/>
     <!-- - - - - - - - - - - - NETLOGO HELP IMAGE HERE - - - - - - - - - - - - --->
   <article class="left_article">
-    <h3>Model Help</a>
+    <h3>Here are some pointers on using the NetLogo model below to investigate virus spread:</a>
     <a name="Help"></a>
     <img src="netLogoHelp.png" style="max-width:100%;max-height:100%;">
   </article>
