--- a/virus.html
+++ b/virus.html
@@ -44,7 +44,7 @@
     <h2 class="noDisplay">Main Content</h2>
     <article class="left_article">
       <h3>Spring break has ended and it's time to get back to school.  An urgent message has appeared in your inbox:</h3>
-      <img src="VirusEmail.png" style="max-width:100%;max-height:100%;border: : 5px solid #111;">
+      <img src="VirusEmail.png" style="max-width:100%;max-height:100%;border:5px solid #111;">
       <h3>        
         There are 387 people in your school.  How long before everyone is infected?
    <!--     How does a virus spread?  The linked netLogo model provides 3 different models to explore.  Models 1, 2, 3.
