--- a/virus.html
+++ b/virus.html
@@ -78,8 +78,9 @@
     <!-- - - - - - - - - - - - NETLOGO HELP IMAGE HERE - - - - - - - - - - - - --->
   <article class="left_article">
     <h3>Here are some pointers on using the NetLogo model below to investigate virus spread:</a>
+    <br/>
     <a name="Help"></a>
-    <img src="netLogoHelp.png" style="max-width:100%;max-height:100%;">
+    <img src="netLogoHelp.png" style="max-width:100%;max-height:100%;border:5px solid #111;">
   </article>
   <br/>
   <br/>
